.archive/kyoo/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kyoo
spec:
  hostnames: ["kyoo.vzkn.eu"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: kyoo-back
          namespace: media
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kyoo-front
          namespace: media
          port: 8901
